tests/auto/corelib/io/qtemporaryfile/qtemporaryfile.pro
@@ -5,3 +5,4 @@ QT = core testlib
 SOURCES = tst_qtemporaryfile.cpp
 TESTDATA += tst_qtemporaryfile.cpp
 DEFINES += QT_DISABLE_DEPRECATED_BEFORE=0
+RESOURCES += qtemporaryfile.qrc
